<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/locationTextView"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/marginMid"
        android:text="@string/app_name"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/homeList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/locationDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?attr/colorOutline"
        app:layout_constraintTop_toBottomOf="@id/locationTextView" />

    <include
        android:id="@+id/chipList"
        layout="@layout/component_chip_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/locationDivider" />


    <TextView
        android:id="@+id/picksText"
        style="?attr/textAppearanceHeadline6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginMid"
        android:layout_marginTop="@dimen/marginSmall"
        android:text="@string/_4u_s_picsk"
        android:textColor="?attr/colorOnBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipList" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/homeList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/picksText"
        tools:listitem="@layout/product_hor_item_list" />

    <View
        android:id="@+id/picksSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/marginMid"
        android:background="?attr/colorOutline"
        app:layout_constraintTop_toBottomOf="@id/homeList" />

    <TextView
        android:id="@+id/popularTextView"
        style="?attr/textAppearanceHeadline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginMid"
        android:text="@string/popular_on_snacks4u"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/picksSeparator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/popularProductsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMid"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/popularTextView"
        tools:listitem="@layout/product_hor_item_list_2" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/state_text" />
</androidx.constraintlayout.widget.ConstraintLayout>